# dora_cmake_example

./: .gitignore  CMakeLists.txt  DoraTargets.cmake  README.md  dataflow.yml
node-c-api/: main.cc
node-rust-api/: main.cc
operator-c-api/: operator.cc
operator-rust-api/: operator.cc  operator.h
